--- a/assets/css/calendar.css
+++ b/assets/css/calendar.css
@@ -77,3 +77,40 @@ body {
 .entregue {
     background-color: var(--secondaryGreen);
 }
+
+@media (min-width: 1200px) {
+    .navbar {
+        position: fixed;
+        left: 0;
+        height: 100%;
+        width: 160px;
+        flex-direction: column;
+    }
+
+    .topbar {
+        width: 80%;
+        flex-direction: row;
+        position: relative;
+        left: 160px;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+    #cadeiras {
+        margin-top: 50px;
+        margin-left: 160px;
+        display: grid;
+        justify-content: center;
+        align-items: center;
+
+        grid-template-columns: 350px 350px 350px;
+    }
+    #calendar {
+        margin-top: 36px;
+        width: 800px;
+        font-family: Inter !important;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
+}
