--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -160,3 +160,100 @@ input[type='password']::-ms-clear {
 #login {
     margin-top: 257px;
 }
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~MODAL~~~~~~~~~~~~~~~~*/
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    align-self: flex-end;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+#upload {
+    margin-top: 48px;
+    width: 90%;
+    height: 46px;
+    padding: 12px 4px;
+    border-radius: 32px;
+    border: none;
+    margin-bottom: 20px;
+
+    background-color: var(--secondaryGreen);
+    color: #fff;
+
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+@media (min-width: 1200px) {
+    .logoSH {
+        position: absolute;
+        top: 24px;
+        right: 650px;
+    }
+
+    #buttonAlternate {
+        display: none;
+    }
+    #loginUser {
+        visibility: visible;
+        margin-top: 70px;
+        position: absolute;
+        top: 140px;
+        left: 300px;
+    }
+    #registraUser {
+    }
+    #userInfos {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        margin-top: 72px;
+    }
+    .registro {
+        position: absolute;
+        top: 213px;
+        right: 300px;
+        padding-left: 50px;
+        border-left: 1px solid var(--navbar);
+    }
+}
